сделан раздел МЫ ЛУЧШИЕ

--- a/css/fonts.scss
+++ b/css/fonts.scss
@@ -2,10 +2,10 @@
 
 @font-face {
     font-family: Gagalin;
-    src: url('./fonts/Gagalin-Regular.otf')
+    src: url('/fonts/Gagalin-Regular.otf')
 }
 
 @font-face {
     font-family: Lifehack;
-    src: url('./fonts/Lifehack Medium.otf')
+    src: url('/fonts/Lifehack\ Medium.otf')
 }
