--- a/scss/components/advantages.scss
+++ b/scss/components/advantages.scss
@@ -26,7 +26,9 @@
     }
   
     &__icon {
-      min-height: 100px;
-      margin-bottom: 25px;
+      min-height: 110px;
+    max-width: 60px;
+    margin: auto;
+
     }
 }
