--- a/scss/settings/base.scss
+++ b/scss/settings/base.scss
@@ -41,6 +41,9 @@ h6 {
   margin: 0;
 }
 
+img {
+    width: 100%;
+}
 
 * {
     box-sizing: border-box;
@@ -50,6 +53,7 @@ section {
     height: 100vh;
     min-width: 650px;
     position: relative;
+    display: flex;
 }
   
 a {
@@ -129,6 +133,8 @@ table {
   
     &--review {
         padding: 0;
+        display: flex;
+        flex: 1;
     }
       
 }
