--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,3 +13,4 @@
 @import './components/advantages';
 @import './components/review';
 @import './components/buttons';
+@import './components/order';
