--- a/scss/settings/base.scss
+++ b/scss/settings/base.scss
@@ -41,15 +41,11 @@ h6 {
   margin: 0;
 }
 
-img {
-    width: 100%;
-}
-
 * {
     box-sizing: border-box;
 }
   
-section {
+.section {
     height: 100vh;
     min-width: 650px;
     position: relative;
