--- a/scss/components/about.scss
+++ b/scss/components/about.scss
@@ -37,7 +37,7 @@
     }
   
     &__image {
-      padding: 0px 35px 70px 0;
+      padding: 0px 35px 70px 35px;
       background-image: url('/icons/drops.svg');
       background-size: contain;
       background-position: 100% 25%;
