--- a/scss/components/order.scss
+++ b/scss/components/order.scss
@@ -23,10 +23,6 @@
     }
   }
 
-  &__title {
-    margin-bottom: 5px;
-  }
-
   &__input {
     width: 100%;
     padding: 8px 21px;
@@ -38,4 +34,5 @@
 
 .container--order {
   flex-wrap: wrap;
+  align-content: center;
 }
