сверстана секция "Команда"

--- a/scss/settings/base.scss
+++ b/scss/settings/base.scss
@@ -148,4 +148,9 @@ table {
     &--order {
         margin-bottom: 40px;
     }
+
+    &--team {
+        width: 100%;
+        margin-bottom: 50px;
+    }
 }
