--- a/css/main.css
+++ b/css/main.css
@@ -331,6 +331,10 @@ table {
 .title--order {
   margin-bottom: 40px;
 }
+.title--team {
+  width: 100%;
+  margin-bottom: 50px;
+}
 
 .header {
   position: absolute;
@@ -479,6 +483,94 @@ table {
   min-height: 110px;
   max-width: 60px;
   margin: auto;
+}
+
+.team {
+  min-height: 100%;
+  background-image: url("/img/bg-team.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  position: relative;
+  color: white;
+}
+.team__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  background-color: #2f3234d4;
+  align-content: center;
+  align-items: center;
+  padding: 0 80px;
+}
+.team--title {
+  font-size: 24px;
+  line-height: 1.25;
+  margin-bottom: 25px;
+}
+.team__item {
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  transition: all 0.3s;
+  flex-wrap: wrap;
+}
+.team__item:before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background-image: url("/icons/arrow.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transform: rotate(180deg);
+  margin-right: 10px;
+}
+.team__item--active .team__name {
+  color: #f9b43b;
+}
+.team__item--active:before {
+  transform: rotate(0deg);
+}
+.team__item--active .team__content {
+  display: flex;
+}
+.team__content {
+  display: flex;
+  display: none;
+  margin-top: 20px;
+}
+.team__photo {
+  width: 100%;
+  max-width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 18px;
+}
+.team__img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.team__about {
+  font-size: 14px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+}
+.team__post {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.team__description {
+  font-weight: lighter;
 }
 
 .review {
