--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import './components/about';
 @import './components/pagination';
 @import './components/advantages';
+@import './components/team';
 @import './components/review';
 @import './components/buttons';
 @import './components/order';
