--- a/scss/components/order.scss
+++ b/scss/components/order.scss
@@ -1,4 +1,6 @@
 .order {
+  display:flex;
+
   &--section {
     background-color: #000;
     background-image: url('/img/bg-order.jpg');
@@ -6,6 +8,15 @@
     background-position: center;
     background-size: cover;
     @include theme($dark-theme: true);
+  }
+
+  &__column {
+    flex: 1 1 50%;
+    margin-right: 20px;
+
+    &:last-child {
+      margin-right: 20px;
+    }
   }
 
   &__row {
@@ -21,15 +32,60 @@
     &:last-child {
       margin-right: 0;
     }
+
+    &--radio {
+      display: flex;
+      align-items: center;
+
+      .order__input {
+        width: auto;
+      }
+    }
   }
+
 
   &__input {
     width: 100%;
     padding: 8px 21px;
-    border: none;
+    border: 2px solid transparent;
     border-radius: 4px;
+
+    &:focus {
+      outline: none;
+      border: 2px solid $light-orange;
+    }
   }
 
+  textarea {
+    resize: vertical;
+  }
+
+  &__fake-button {
+    display: flex;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: white;;
+    justify-content: center;
+    align-items: center;
+
+    &:before {
+      content: " ";
+      display: flex;
+      width: 0px;
+      height: 0px;
+      border-radius: 50%;
+      background-color: #e1942a;
+    }
+  }
+
+}
+
+.order__block--radio {
+  .order__input:checked+.order__fake-button:before {
+      width: 7px;
+      height: 7px;
+  }
 }
 
 .container--order {
