--- a/scss/components/team.scss
+++ b/scss/components/team.scss
@@ -58,7 +58,7 @@
       }
 
       .team__content {
-        display: flex;
+        min-height: 100px;
       }
     }
 
@@ -66,12 +66,13 @@
 
   &__content {
     display: flex;
-    display: none;
     margin-top: 20px;
+    height: 0;
+    overflow: hidden;
   }
 
   &__name {
-
+    width: 95%;
   }
 
   &__photo {
@@ -99,6 +100,7 @@
   &__post {
     font-weight: bold;
     margin-bottom: 10px;
+    width: 100%;
   }
 
   &__description {
