--- a/scss/components/menu.scss
+++ b/scss/components/menu.scss
@@ -17,11 +17,10 @@
         right: 0;
         top: 0;
         bottom: 0;
-        max-width: 70%;
     }
 
     &__title-container {
-        min-height: 80px;
+        max-width: 80px;
         background-image: url('/img/bg-menu-1.jpg');
         background-position: center;
         background-repeat: no-repeat;
@@ -33,5 +32,27 @@
     &__title {
         font-size: 40px;
         padding: 0 40px;
+        transform: rotate(-90deg);
     }
+
+    &__list {
+        display: flex;
+        height: 100%;
+    }
+
+    &__item {
+        display: flex;
+
+        &--active {
+
+            .menu-section__text {
+                width: 60%;
+            }
+        }
+    }
+
+    &__text {
+        width: 0px;
+    }
+
 }
