--- a/scss/components/menu.scss
+++ b/scss/components/menu.scss
@@ -17,22 +17,43 @@
         right: 0;
         top: 0;
         bottom: 0;
+        max-width: 55%;
     }
 
     &__title-container {
-        max-width: 80px;
         background-image: url('/img/bg-menu-1.jpg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
+        padding: 40px 20px;
+        position: relative;
+
+        &:after {
+            content: "";
+            position: absolute;
+
+            background-color: #000000c7;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+
+        @each $number, $bg in $number-bg {
+            &--#{$number} {
+                background-image: $bg;
+            }
+        }
     }
 
     &__title {
         font-size: 40px;
-        padding: 0 40px;
-        transform: rotate(-90deg);
+        writing-mode: vertical-lr;
+        transform: rotate(180deg);
+        line-height: 1;
+        z-index: 5;
     }
 
     &__list {
@@ -46,13 +67,22 @@
         &--active {
 
             .menu-section__text {
-                width: 60%;
+                width: 100%;
+                padding: 60px 35px;
             }
         }
     }
 
     &__text {
         width: 0px;
+        background-color: #0000008f;
     }
 
+}
+
+.title--menu-section {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    z-index: 10;
 }
