--- a/scss/settings/base.scss
+++ b/scss/settings/base.scss
@@ -4,9 +4,11 @@ body {
     padding: 0;
     height: 100%;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.42;
     position: relative;
+    font-weight: lighter;
+    line-height: 1.7;
 }
 
 * {
