--- a/scss/settings/mixins.scss
+++ b/scss/settings/mixins.scss
@@ -26,3 +26,9 @@
     font-size: 14px;
     line-height: 1.6;
 }
+
+$number-bg: (
+  1: url('/img/bg-menu-1.jpg'),
+  2: url('/img/bg-menu-2.jpg'),
+  3: url('/img/bg-menu-3.jpg')
+);
